--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Carmen Urízar</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" referrerpolicy="no-referrer" />">
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon"/>
 </head>
 <body>
   <article>
-    <div>
-      <div>
-        <header>
-          <img src="https://play-lh.googleusercontent.com/tfBsUAKUwLnmRFw0wfSYM-RzpkizXxCupGoaIZQwdTe1KzZeQK0r-COohiIQchdnrKZg" alt="Carmen Urízar" width="300"/>
+    <div class="container">
+      <div class="card-header">
+        <header class="pic">
+          <img src="https://play-lh.googleusercontent.com/tfBsUAKUwLnmRFw0wfSYM-RzpkizXxCupGoaIZQwdTe1KzZeQK0r-COohiIQchdnrKZg" alt="Profesor Layton" width="300"/>
         </header>
         <main>
           <h1>Carmen Urízar</h1>
-          <h2>Diseñadora Gráfica</h2>
+          <h2>Developer & designer</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ad minima sequi mollitia eveniet eos nihil, architecto sit voluptatum officiis quas necessitatibus sapiente laudantium debitis dolor aperiam ab temporibus similique?</p>
         </main>
         <footer>
