--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ad minima sequi mollitia eveniet eos nihil, architecto sit voluptatum officiis quas necessitatibus sapiente laudantium debitis dolor aperiam ab temporibus similique?</p>
         </main>
         <footer>
-          <nav>
+          <nav class="icons">
             <ul>
               <li>
-                <a href="https://www.youtube.com/" target="_blank" rel="noreferrer noopener"><img src="https://files.123inventatuweb.com/59/24/59242ec5-a8e8-446e-8a6e-1017d70740d7.png" alt="Youtube" height="34"></a>
+                <a href="#" class="fab fa-facebook-f"></a>
               </li>
               <li>
-                <a href="https://www.facebook.com/" target="_blank" rel="noreferrer noopener"><img src="https://cdn-icons-png.flaticon.com/512/20/20673.png" alt="Facebook" height="32"></a>
+                <a href="#" class="fab fa-youtube"></a>
               </li>
               <li>
-                <a href="https://www.instagram.com/" target="_blank" rel="noreferrer noopener"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384015.png" alt="Instagram" height="32"></a>
+                <a href="#" class="fab fa-github"></a>
               </li>
             </ul>
           </nav>
