--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ad minima sequi mollitia eveniet eos nihil, architecto sit voluptatum officiis quas necessitatibus sapiente laudantium debitis dolor aperiam ab temporibus similique?</p>
         </main>
         <footer>
-          <nav class="icons">
-            <ul>
+          <nav class="icons-container">
+            <ul class="icons">
               <li>
                 <a href="#" class="fab fa-facebook-f"></a>
               </li>
@@ -35,6 +35,9 @@
               </li>
             </ul>
           </nav>
+          <div>
+            <a href="#" class="contact-btn">Contáctame</a>
+          </div>
         </footer>
       </div>
     </div>
