Cambio de foto personal

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <div class="container">
       <div class="card-header">
         <header class="pic">
-          <img src="https://play-lh.googleusercontent.com/tfBsUAKUwLnmRFw0wfSYM-RzpkizXxCupGoaIZQwdTe1KzZeQK0r-COohiIQchdnrKZg" alt="Profesor Layton" width="300"/>
+          <img src="pic.png" alt="Carmen Urízar"/>
         </header>
         <main>
           <h1>Carmen Urízar</h1>
           <h2>Developer & designer</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ad minima sequi mollitia eveniet eos nihil, architecto sit voluptatum officiis quas necessitatibus sapiente laudantium debitis dolor aperiam ab temporibus similique?</p>
+          <p>Apasionada por el diseño. <br>Estudiante de Desarrollo Web.</p>
         </main>
         <footer>
           <nav class="icons-container">
