Metodología BEM index selectores css

--- a/index.html
+++ b/index.html
@@ -6,42 +6,46 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Carmen Urízar</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" referrerpolicy="no-referrer" />">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./css/index.css"/>
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon"/>
 </head>
-<body>
-  <article>
-    <div class="container">
-      <div class="card-header">
-        <header class="pic">
-          <img src="pic.png" alt="Carmen Urízar"/>
-        </header>
-        <main>
-          <h1>Carmen Urízar</h1>
-          <h2>Developer & designer</h2>
-          <p>Apasionada por el diseño. <br>Estudiante de Desarrollo Web.</p>
-        </main>
-        <footer>
-          <nav class="icons-container">
-            <ul>
-              <li>
-                <a href="https://www.facebook.com/carmen.urizar.valdivia/" class="fab fa-facebook-f"></a>
-              </li>
-              <li>
-                <a href="https://www.youtube.com/" class="fab fa-youtube"></a>
-              </li>
-              <li>
-                <a href="https://github.com/carmenuv" class="fab fa-github"></a>
-              </li>
-            </ul>
-          </nav>
-          <div>
-            <a href="#" class="contact-btn">Contáctame</a>
-          </div>
-        </footer>
+<body class="body">
+  <main>
+    <section class="profile">
+      <div class="profile__container">
+        <article class="card">
+          <header class="card__header">
+            <div class="card__header-img-container">
+              <img src="pic.png" alt="Carmen Urízar" class="card__header-img"/>
+            </div>
+          </header>
+          <section class="card__body">
+            <h1 class="card__body-title">Carmen Urízar</h1>
+            <h2 class="card__body-keywords">Developer & designer</h2>
+            <p class="card__body-presentation">Apasionada por el diseño. <br>Estudiante de Desarrollo Web.</p>
+          </section>
+          <footer class="card__footer">
+            <nav>
+              <ul class="card__fotter-nav-list">
+                <li class="card__fotter-nav-item">
+                  <a href="https://www.facebook.com/carmen.urizar.valdivia/" class="fab fa-facebook-f"></a>
+                </li>
+                <li class="card__fotter-nav-item">
+                  <a href="https://www.youtube.com/" class="fab fa-youtube"></a>
+                </li>
+                <li class="card__fotter-nav-item">
+                  <a href="https://github.com/carmenuv" class="fab fa-github"></a>
+                </li>
+              </ul>
+            </nav>
+            <div>
+              <a href="#" class="contact-btn">Contáctame</a>
+            </div>
+          </footer>
+        </article>
       </div>
-    </div>
-  </article>
+    </section>
+  </main>
   <!-- <img src="https://play-lh.googleusercontent.com/tfBsUAKUwLnmRFw0wfSYM-RzpkizXxCupGoaIZQwdTe1KzZeQK0r-COohiIQchdnrKZg" alt="Carmen Urízar" width="256"/>
   <h1>Carmen Urízar</h1>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid earum, voluptate, explicabo quod nemo iure ipsam error placeat, beatae natus sint. Obcaecati quod vel, sint alias iure soluta maiores quia!</p> -->
