--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Carmen Urízar</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" referrerpolicy="no-referrer" />">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" referrerpolicy="no-referrer"/>
   <link rel="stylesheet" href="./css/index.css"/>
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon"/>
 </head>
@@ -22,7 +22,7 @@
           <section class="card__body">
             <h1 class="card__body-title">Carmen Urízar</h1>
             <h2 class="card__body-keywords">Developer & designer</h2>
-            <p class="card__body-presentation">Apasionada por el diseño. <br>Estudiante de Desarrollo Web.</p>
+            <br class="card__body-presentation">Apasionada por el diseño. Estudiante de Desarrollo Web.</p>
           </section>
           <footer class="card__footer">
             <nav>
@@ -46,8 +46,5 @@
       </div>
     </section>
   </main>
-  <!-- <img src="https://play-lh.googleusercontent.com/tfBsUAKUwLnmRFw0wfSYM-RzpkizXxCupGoaIZQwdTe1KzZeQK0r-COohiIQchdnrKZg" alt="Carmen Urízar" width="256"/>
-  <h1>Carmen Urízar</h1>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid earum, voluptate, explicabo quod nemo iure ipsam error placeat, beatae natus sint. Obcaecati quod vel, sint alias iure soluta maiores quia!</p> -->
 </body>
 </html>
