Css body y footer

--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
           </header>
           <section class="card__body">
             <h1 class="card__body-title">Carmen Urízar</h1>
-            <h2 class="card__body-keywords">Developer & designer</h2>
-            <br class="card__body-presentation">Apasionada por el diseño. Estudiante de Desarrollo Web.</p>
+            <h2 class="card__body-keywords">Designer & Developer</h2>
+            <br class="card__body-presentation">Apasionada por el diseño. <br>Estudiante de Desarrollo Web.</p>
           </section>
           <footer class="card__footer">
             <nav>
               <ul class="card__fotter-nav-list">
                 <li class="card__fotter-nav-item">
-                  <a href="https://www.facebook.com/carmen.urizar.valdivia/" class="fab fa-facebook-f"></a>
+                  <a href="https://www.facebook.com/carmen.urizar.valdivia/" class="card__fotter-nav-icon fab fa-facebook-f"></a>
                 </li>
                 <li class="card__fotter-nav-item">
-                  <a href="https://www.youtube.com/" class="fab fa-youtube"></a>
+                  <a href="https://www.youtube.com/" class="card__fotter-nav-icon fab fa-youtube"></a>
                 </li>
                 <li class="card__fotter-nav-item">
-                  <a href="https://github.com/carmenuv" class="fab fa-github"></a>
+                  <a href="https://github.com/carmenuv" class="card__fotter-nav-icon fab fa-github"></a>
                 </li>
               </ul>
             </nav>
-            <div>
-              <a href="#" class="contact-btn">Contáctame</a>
+            <div class="card__footer-button-container">
+              <a href="#" class="card__footer-button-link">Contáctame</a>
             </div>
           </footer>
         </article>
