Update css index estilos de las clases

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
           <section class="card__body">
             <h1 class="card__body-title">Carmen Urízar</h1>
             <h2 class="card__body-keywords">Designer & Developer</h2>
-            <br class="card__body-presentation">Apasionada por el diseño. <br>Estudiante de Desarrollo Web.</p>
+            <p class="card__body-presentation">Apasionada por el diseño. Desarrolladora eLearning. Estudiante de Desarrollo Web.</p>
           </section>
           <footer class="card__footer">
-            <nav>
+            <nav class="card__footer-nav-container">
               <ul class="card__fotter-nav-list">
                 <li class="card__fotter-nav-item">
                   <a href="https://www.facebook.com/carmen.urizar.valdivia/" class="card__fotter-nav-icon fab fa-facebook-f"></a>
