--- a/index.html
+++ b/index.html
@@ -4,10 +4,25 @@
   <meta charset="UTF-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Carmen Urízar</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" referrerpolicy="no-referrer"/>
   <link rel="stylesheet" href="./css/index.css"/>
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon"/>
+
+<title>Tarjeta de perfil de Carmen Urízar Valdivia</title>
+<meta name="title" content="Tarjeta de perfil de Carmen Urízar Valdivia">
+<meta name="description" content="Designer & Developer. Apasionada por el diseño. Desarrolladora eLearning. Estudiante de Desarrollo Web.">
+
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://carmenuv.github.io/personal-card/">
+<meta property="og:title" content="Tarjeta de perfil de Carmen Urízar Valdivia">
+<meta property="og:description" content="Designer & Developer. Apasionada por el diseño. Desarrolladora eLearning. Estudiante de Desarrollo Web.">
+<meta property="og:image" content="https://i.postimg.cc/0Q9tTt8y/personal-card-carmen-urizar.jpg">
+
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://carmenuv.github.io/personal-card/">
+<meta property="twitter:title" content="Tarjeta de perfil de Carmen Urízar Valdivia">
+<meta property="twitter:description" content="Designer & Developer. Apasionada por el diseño. Desarrolladora eLearning. Estudiante de Desarrollo Web.">
+<meta property="twitter:image" content="https://i.postimg.cc/0Q9tTt8y/personal-card-carmen-urizar.jpg">
 </head>
 <body class="body">
   <main>
